# python

./: README.md  cEQ.py  cubicEquation.c  cubicEquation.cp311-win_amd64.pyd  cubicEquation.py  jupyter三次方程.py  pyExtent.pyd  server.py  setup.py  sqlTools.py  test.md  test.txt  线性方程组求解.py
PyPi项目源/MachineLearningTools-0.0.4/: MachineLearningTools-0.0.3.py
PyPi项目源/ansiDefine-0.0.4/: ansiDefine-0.0.5.py
PyPi项目源/figureTools-0.0.1/: figureTools-0.0.2.py
PyPi项目源/logTools-0.0.3/: logTools-0.0.3.py  logTools-0.0.4.py
PyPi项目源/markDownTools-0.0.1/: markDownTools-0.0.1.py
PyPi项目源/netTools-1.0.5/: netTools-1.0.4.py
PyPi项目源/ptioTools-0.0.5/: PTIOtools-0.0.5.py
PyPi项目源/spiderTools-0.0.3/: spiderTools-0.0.1.py
PyPi项目源/sqlTools-0.0.8/: SQLtools-0.0.3.py  SQLtools-0.0.4.py  SQLtools-0.0.7.py
PyPi项目源/systemTools-0.0.4/: systemTools-0.0.6.py
PyPi项目源/textTools-0.0.2/: textTools-0.0.2.py
PyPi项目源/uploadTools-0.0.1/: uploadTools-0.0.1.py
privateProject/docSpawner/: spawner.py  test.md  test.py
privateProject/englishApp/: GUI.py  engine.py  单词软件主体.py
privateProject/exam/: app.py  questionType.py
privateProject/mcProtocol/: baseType.py  client.py  package.py
privateProject/minecraftExtent/: extentAbc.py  temp.py
privateProject/p2p/: _client.py  client.py  proto.py  server.py
privateProject/pyqtWebConvert/: convert.py  executor.py  ptParser.py  qtParser.py
privateProject/pytorchLearn/: MNIST识别.py  pytorch基础.md  pytorch基础.py  卷积神经网络.py  图像识别常用模块.py  复杂搭建网络.py
privateProject/quesParser/: lexer.py  main.py  quesParser.pyd  quesParser.pyi
privateProject/responsive/: reactive.py  test.py
privateProject/taskSorter/: schedule.py
privateProject/timeAllocation/: UI.py  UIrecode.py  _UI.py  style.qss  timeAllocation.py
privateProject/winApi/: __init__.py
pypiOrigin/: astFunc.py
pypiOrigin/MachineLearningTools/: MachineLearningTools.py
pypiOrigin/MachineLearningTools-0.0.4/: MachineLearningTools-0.0.1.py  MachineLearningTools-0.0.4.py
pypiOrigin/ansiDefine/: ansiDefine.py  args.json  pyproject.toml
pypiOrigin/ansiDefine-0.0.4/: ansiDefine-0.0.3.py  ansiDefine-0.0.6.py
pypiOrigin/ansiDefine/ansiDefine/: MANIFEST.in  README.md  __init__.py  ansiDefine.pyd  pyproject.toml
pypiOrigin/ansiDefine/ansiDefine/ansiDefine/: __init__.py  ansiDefine.pyd  ansiDefine.pyi
pypiOrigin/ansiDefine/ansiDefine/ansiDefine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypiOrigin/conFunc/: args.json  confunc.py
pypiOrigin/conFunc-0.0.3/: con_func-0.0.3.py  con_func-0.0.4.py
pypiOrigin/figureTools/: args.json  figureTools.py
pypiOrigin/figureTools-0.0.1/: figureTools-0.0.1.py
pypiOrigin/linkedList/: linkedList.pyi
pypiOrigin/logTools/: args.json  logTools.py
pypiOrigin/markDownTools/: markDownTools.py
pypiOrigin/markDownTools-0.0.1/: markDownTools-0.0.2.py
pypiOrigin/netTools/: args.json  netTools.py
pypiOrigin/netTools-1.0.5/: netTools-1.0.5.py
pypiOrigin/netTools/netTools/: MANIFEST.in  README.md  pyproject.toml
pypiOrigin/netTools/netTools/netTools/: __init__.py  netTools.pyd  netTools.pyi
pypiOrigin/ptioTools/: PTIOtools.py  args.json
pypiOrigin/ptioTools-0.0.5/: PTIOtools-0.0.4.py
pypiOrigin/spiderTools/: spiderTools.py
pypiOrigin/spiderTools-0.0.3/: spiderTools-0.0.2.py  spiderTools-0.0.3.py
pypiOrigin/sqlTools/: Doxyfile  _sqlTools.py  args.json  newSQL.py  pyproject.toml  sqlTools.py  sqlTools_.py  typeSup.py
pypiOrigin/sqlTools-0.0.8/: SQLtools-0.0.6.py  (+1 more)
pypiOrigin/sqlTools/sqlTools/: MANIFEST.in  README.md  pyproject.toml  test.py
pypiOrigin/sqlTools/sqlTools/sqlTools/: __init__.py  sqlTools.pyd  sqlTools.pyi
pypiOrigin/sqlTools/sqlTools/sqlTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypiOrigin/systemTools/: args.json  pyproject.toml  pyproject.toml.txt  setup.py  systemTools.py
pypiOrigin/systemTools/systemTools/: MANIFEST.in  README.md  pyproject.toml
pypiOrigin/systemTools/systemTools/systemTools/: __init__.py  systemTools.pyd  systemTools.pyi
pypiOrigin/systemTools/systemTools/systemTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scatteredFile/: Tree.py  argParse.py  ast.json  concurrentFrame.py  debuger.py  flagParser.py  gesture.py  getDoc.py  getPicture.py  interactingCMD.py  jsExecutor.py  libInfo.py  minecraftRcon.py  netPackage.py  package.json  pnpm-lock.yaml  timeAllocation.py  uploadTools.py  vueInit.py  vueInit.spec  win32test.py  word.py  并发翻译.py  漫画爬取.py
test/: _.py  annotationTest.py  ast.txt  linkedList.pyi  setup.py
(+66 files in other folders)
