[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ansiDefine-org"
version = "0.0.1"
authors = [
  { name="Xiao Songtao", email="2257699870@qq.com" },
]
description = "Simplify the process of using ANSI escape characters to output colorful text."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/edoCsItahW/python"
"Bug Tracker" = "https://github.com/edoCsItahW/python/issues"
