[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlTools-org"
version = "0.0.1"
authors = [
  { name="Xiao Songtao", email="2257699870@qq.com" },
]
description = "Integrated some methods to make operating MySQL easier."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/edoCsItahW/python/pypiOrigin/sqlTools"
"Bug Tracker" = "https://github.com/edoCsItahW/python/issues"
