[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systemTools"
version = "0.0.12"
authors = [
  { name="Xiao Songtao", email="2257699870@qq.com" },
]
description = "Some tools to simplify system operations."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
files = ["asdf"]

[project.urls]
"Homepage" = "https://github.com/edoCsItahW/python/systemTools"
"Bug Tracker" = "https://github.com/edoCsItahW/python/issues"
