[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ansiDefine"
version = "1.0.4"
authors = [
  { name="Xiao Songtao", email="2257699870@qq.com" },
]
description = "Provide some useful color console functions and warppers for ANSI text"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
files = ["E:\\codeSpace\\codeSet\\Python\\pypiOrigin\\ansiDefine\\ansiDefine\\ansiDefine\\ansiDefine.pyd"]

[project.urls]
"Homepage" = "https://github.com/edoCsItahW/python/pypiOrigin/ansiDefine"
"Bug Tracker" = "https://github.com/edoCsItahW/python/issues"
